BC-3530: исправление ошибок (+ cherry-pick с BC-3529)