@@ -11,10 +11,9 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import school.faang.user_service.dto.RecommendationRequestDto;
 import school.faang.user_service.dto.RequestFilterDto;
 import school.faang.user_service.entity.RequestStatus;
-import school.faang.user_service.entity.Skill;
+import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.recommendation.RecommendationRequest;
 import school.faang.user_service.entity.recommendation.SkillRequest;
-import school.faang.user_service.exception.DataValidationException;
 import school.faang.user_service.filter.requestfilter.CreateAtFilter;
 import school.faang.user_service.filter.requestfilter.MessageFilter;
 import school.faang.user_service.filter.requestfilter.ReceiverIdFilter;
@@ -23,16 +22,15 @@ import school.faang.user_service.filter.requestfilter.RequestStatusFilter;
 import school.faang.user_service.filter.requestfilter.SkillRequestFilter;
 import school.faang.user_service.filter.requestfilter.UpdateAtFilter;
 import school.faang.user_service.mapper.RecommendationRequestMapperImpl;
-import school.faang.user_service.repository.SkillRepository;
-import school.faang.user_service.repository.UserRepository;
 import school.faang.user_service.repository.recommendation.RecommendationRequestRepository;
+import school.faang.user_service.validator.RecommendationRequestValidator;
+import school.faang.user_service.validator.SkillValidator;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @ExtendWith(MockitoExtension.class)
 class RecommendationRequestServiceTest {
@@ -43,89 +41,63 @@ class RecommendationRequestServiceTest {
     @Mock
     private RecommendationRequestRepository recommendationRequestRepository;
 
-    @Mock
-    private UserRepository userRepository;
-
-    @Mock
-    private SkillRepository skillRepository;
-
     @Spy
     private RecommendationRequestMapperImpl recommendationRequestMapper;
+
+    @Mock
+    private RecommendationRequestValidator recommendationRequestValidator;
+
+    @Mock
+    private SkillValidator skillValidator;
 
     private RecommendationRequestDto requestDto1;
 
     private RecommendationRequestDto requestDto2;
 
-    private RequestFilterDto requestFilterDto;
+    private LocalDateTime createdAt;
+
+    RecommendationRequest entity1;
+
+    RecommendationRequest entity2;
 
     @BeforeEach
     void setUp() {
-
-        LocalDateTime createdAt = LocalDateTime.now().minusMonths(7);
+        createdAt = LocalDateTime.now().minusMonths(7);
         requestDto1 = RecommendationRequestDto.builder()
                 .id(1L)
                 .message("message")
                 .status(RequestStatus.ACCEPTED)
-                .skills(List.of(new SkillRequest(1L, new RecommendationRequest(), Skill.builder().id(1).build())))
+                .skillsId(List.of(1L))
                 .requesterId(1L)
                 .receiverId(1L)
                 .createdAt(createdAt)
+                .updatedAt(createdAt)
                 .build();
         requestDto2 = RecommendationRequestDto.builder()
                 .id(2L)
-                .build();
-        requestFilterDto = RequestFilterDto.builder()
-                .message("ssa")
-                .status(RequestStatus.ACCEPTED)
-                .skills(List.of(new SkillRequest(1L, new RecommendationRequest(), Skill.builder().id(1).build())))
-                .requesterId(1L)
-                .receiverId(1L)
+                .requesterId(2L)
+                .receiverId(2L)
+                .skillsId(Collections.emptyList())
                 .createdAt(createdAt)
+                .updatedAt(createdAt)
                 .build();
-    }
-
-    @Test
-    void testValidationExistByIdThrowNegative() {
-        assertThrows(DataValidationException.class, () -> recommendationRequestService.create(requestDto1));
-    }
-
-    @Test
-    void testValidationExistByIdThrowPositive() {
-        Mockito.when(userRepository.existsById(1L)).thenReturn(true);
-        Mockito.when(skillRepository.existsById(1L)).thenReturn(true);
-        assertDoesNotThrow(() -> recommendationRequestService.create(requestDto1));
-    }
-
-    @Test
-    void testValidationRequestDateNegative() {
-        requestDto1.setCreatedAt(LocalDateTime.now().minusMonths(5));
-        assertThrows(DataValidationException.class, () -> recommendationRequestService.create(requestDto1));
-    }
-
-    @Test
-    void testValidationRequestDatePositive() {
-        Mockito.when(userRepository.existsById(1L)).thenReturn(true);
-        Mockito.when(skillRepository.existsById(1L)).thenReturn(true);
-        assertDoesNotThrow(() -> recommendationRequestService.create(requestDto1));
-    }
-
-    @Test
-    void testValidationExistSkillNegative() {
-        requestDto1.setCreatedAt(LocalDateTime.now());
-        assertThrows(DataValidationException.class, () -> recommendationRequestService.create(requestDto1));
-    }
-
-    @Test
-    void testValidationExistSkillPositive() {
-        Mockito.when(userRepository.existsById(1L)).thenReturn(true);
-        assertThrows(DataValidationException.class, () -> recommendationRequestService.create(requestDto1));
-    }
-
-    @Test
-    void testGetRequests() {
-        RecommendationRequest entity1 = recommendationRequestMapper.toEntity(requestDto1);
-        RecommendationRequest entity2 = recommendationRequestMapper.toEntity(requestDto2);
-
+        entity1 = RecommendationRequest.builder()
+                .id(1L)
+                .message("message")
+                .status(RequestStatus.ACCEPTED)
+                .skills(List.of(SkillRequest.builder().id(1L).build()))
+                .requester(User.builder().id(1L).build())
+                .receiver(User.builder().id(1L).build())
+                .createdAt(createdAt)
+                .updatedAt(createdAt)
+                .build();
+        entity2 = RecommendationRequest.builder()
+                .id(2L)
+                .requester(User.builder().id(2L).build())
+                .receiver(User.builder().id(2L).build())
+                .createdAt(createdAt)
+                .updatedAt(createdAt)
+                .build();
         List<RequestFilter> filters = List.of(
                 new MessageFilter(),
                 new SkillRequestFilter(),
@@ -134,13 +106,142 @@ class RecommendationRequestServiceTest {
                 new CreateAtFilter(),
                 new UpdateAtFilter()
         );
-
         recommendationRequestService.setRequestFilters(filters);
+    }
+
+    @Test
+    void tesCreate() {
+        recommendationRequestService.create(requestDto1);
+        Mockito.verify(recommendationRequestRepository).save(recommendationRequestMapper.toEntity(requestDto1));
+    }
+
+    @Test
+    void testGetRequestsWithAllFilters() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .messagePattern("ssa")
+                .statusPattern(RequestStatus.ACCEPTED)
+                .skillsPattern(List.of(1L))
+                .requesterIdPattern(1L)
+                .receiverIdPattern(1L)
+                .createdAtPattern(createdAt)
+                .build();
 
         Mockito.when(recommendationRequestRepository.findAll())
                 .thenReturn(List.of(entity1, entity2));
 
         List<RecommendationRequestDto> expected = List.of(requestDto1);
+
+        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGetRequestsWithMessageFilter() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .messagePattern("ssa")
+                .build();
+
+        Mockito.when(recommendationRequestRepository.findAll())
+                .thenReturn(List.of(entity1, entity2));
+
+        List<RecommendationRequestDto> expected = List.of(requestDto1);
+
+        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGetRequestsWithCreateAtFilter() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .createdAtPattern(createdAt)
+                .build();
+
+        Mockito.when(recommendationRequestRepository.findAll())
+                .thenReturn(List.of(entity1, entity2));
+
+        List<RecommendationRequestDto> expected = List.of(requestDto1, requestDto2);
+
+        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGetRequestsWithReceiverIdFilter() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .receiverIdPattern(1L)
+                .build();
+
+        Mockito.when(recommendationRequestRepository.findAll())
+                .thenReturn(List.of(entity1, entity2));
+
+        List<RecommendationRequestDto> expected = List.of(requestDto1);
+
+        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGetRequestsWithRequesterIdFilter() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .receiverIdPattern(1L)
+                .build();
+
+        Mockito.when(recommendationRequestRepository.findAll())
+                .thenReturn(List.of(entity1, entity2));
+
+        List<RecommendationRequestDto> expected = List.of(requestDto1);
+
+        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGetRequestsWithRequestStatusFilter() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .statusPattern(RequestStatus.ACCEPTED)
+                .build();
+
+        Mockito.when(recommendationRequestRepository.findAll())
+                .thenReturn(List.of(entity1, entity2));
+
+        List<RecommendationRequestDto> expected = List.of(requestDto1);
+
+        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGetRequestsWithSkillRequestFilter() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .skillsPattern(List.of(1L))
+                .build();
+
+        Mockito.when(recommendationRequestRepository.findAll())
+                .thenReturn(List.of(entity1, entity2));
+
+        List<RecommendationRequestDto> expected = List.of(requestDto1);
+
+        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGetRequestsWithUpdateAtFilter() {
+        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
+                .updatedAtPattern(createdAt)
+                .build();
+
+        Mockito.when(recommendationRequestRepository.findAll())
+                .thenReturn(List.of(entity1, entity2));
+
+        List<RecommendationRequestDto> expected = List.of(requestDto1, requestDto2);
 
         List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
 
